# decentrathon-SOLANA-COOKIING

./: README.md  package.json
ai-lp-manager/: .gitignore  README.md
ai-lp-manager/backend/: ai_engine.py  config.py  data_fetcher.py  requirements.txt  server.py  simulation.py  solana_client.py  start.sh  test_qa.py
ai-lp-manager/data/: sample_pools.json
ai-lp-manager/frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
ai-lp-manager/frontend/api/: aiDecision.ts  contract.ts  simulate.ts  wallet.ts
ai-lp-manager/frontend/app/: globals.css  layout.tsx
ai-lp-manager/frontend/app/dashboard/: page.tsx
ai-lp-manager/frontend/app/portfolio/: page.tsx
ai-lp-manager/frontend/app/simulate/: page.tsx
ai-lp-manager/frontend/components/: LivePriceChart.tsx  Navbar.tsx  SolanaWalletProvider.tsx  StatCard.tsx  VolatilityBar.tsx
ai-lp-manager/frontend/hooks/: usePriceStream.ts
ai-lp-manager/lp_manager_contract/: Anchor.toml  package.json
ai-lp-manager/lp_manager_contract/programs/lp_manager_contract/: Cargo.toml
ai-lp-manager/lp_manager_contract/programs/lp_manager_contract/src/: lib.rs
ai-lp-manager/lp_manager_contract/tests/: lp_manager_contract.js
app/: globals.css
app/simulate/: page.tsx
components/: AIDecisionFeed.tsx  LivePriceChart.tsx  VolatilityBar.tsx
